first integration test